# stellarsolver

./: .gitignore  CMakeLists.txt  README.md  dms.h  externalsextractorsolver.cpp  externalsextractorsolver.h  imagelabel.h  installLinux.sh  internalsolver.cpp  internalsolver.h  libsexysolver.pc.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  onlinesolver.cpp  onlinesolver.h  package.xml  resort-xylist.c  resources.qrc  sexysolver.cpp  sexysolver.h  sexysolver.pc.cmake  stellarsolver.pc.cmake  structuredefinitions.h  version.h.cmake
astrometry/: boilerplate.h  os-features.h
astrometry/blind/: blind.c  engine.c  plotstuff_c.py  plotstuff_wrap.c  solvedclient.c  solvedfile.c  solver.c  tweak2.c  verify.c  windirent.h
astrometry/include/astrometry/: an-endian.h  anqfits.h  bl.h  errors.h  fitsfile.h  ioutils.h  keywords.h  log.h  os-features-config.h  os-features.h  qfits_std.h  qfits_table.h  tic.h
astrometry/libkd/: dualtree_rangesearch.c  kdtree_internal.c  kdtree_internal_fits.c
astrometry/qfits-an/: anqfits.c  qfits_memory.c  qfits_time.c  qfits_tools.c
astrometry/util/: bl.c  bt.c  fileutils.c  fitsbin.c  fitsfile.c  fitsioutils.c  healpix.c  ioutils.c  log.c  makefile.common  os-features.c  permutedsort.c  qsort_reentrant.c  quadfile.c  starutil.c  tic.c  util.py  util_wrap.c
cli/: README.md  main.cpp
cmake/modules/: FindASTROMETRYNET.cmake  FindAstrometryNet.cmake  FindCFITSIO.cmake  FindStellarSolver.cmake  FindWCSLIB.cmake
craft-blueprint/SexySolver/: SexySolver.py  SexySolverInstallIcon.icns
craft-blueprint/stellarsolver/: stellarsolver.py
craft-blueprints/QT5/StellarSolverTester/: StellarSolverTester.py
craft-blueprints/QT5/stellarbatchsolver/: StellarBatchSolverInstallIcon.icns  stellarbatchsolver.py
craft-blueprints/QT5/stellarsolver/: stellarsolver.py
craft-blueprints/QT6/StellarSolverTester/: StellarSolverTester.py
craft-blueprints/QT6/stellarbatchsolver/: stellarbatchsolver.py
craft-blueprints/QT6/stellarsolver/: stellarsolver.py
craft-blueprints/StellarSolverTester/: StellarSolverTester.py
craft-blueprints/stellarbatchsolver/: stellarbatchsolver.py
craft-blueprints/stellarsolver/: stellarsolver.py
debian/: changelog  control  copyright  libstellarsolver-dev.install  libstellarsolver.install  rules
demos/: demobatchsolve.cpp  demobatchsolve.h  demobatchsolve.ui  demodeletesolver.cpp  demodeletesolver.h  demoextractsolve.cpp  demoextractsolve.h  demofitsextractsolve.cpp  demofitsextractsolve.h  demofitsplatesolve.cpp  demofitsplatesolve.h  demofitsstarextract.cpp  demofitsstarextract.h  demomultiplesolves.cpp  demoplatesolve.cpp  demoplatesolve.h  demosignalsslots.cpp  demosignalsslots.h  demostarextract.cpp  demostarextract.h  demotwostellarsolvers.cpp  demotwostellarsolvers.h  randomsky.fits
linux-scripts/: installStellarSolverLibrary.sh  installStellarSolverLibraryQt5.sh  installStellarSolverLibraryQt6.sh  installStellarSolverTester.sh  installStellarSolverTesterQt5.sh  installStellarSolverTesterQt6.sh  removeStellarSolver.sh
sexysolver/: externalsextractorsolver.cpp  externalsextractorsolver.h  internalsextractorsolver.cpp  internalsextractorsolver.h  onlinesolver.cpp  onlinesolver.h  parameters.cpp  parameters.h  sextractorsolver.cpp  sextractorsolver.h  sexysolver.cpp  sexysolver.h  stellarsolver.h  structuredefinitions.h
sexysolver/astrometry/: os-features.h
sexysolver/astrometry/blind/: blind.c  blindutils.c  engine.c  solver.c  tweak2.c
sexysolver/astrometry/libkd/: dualtree_rangesearch.c
sexysolver/astrometry/qfits-an/: anqfits.c  qfits_memory.c  qfits_time.c  qfits_tools.c
sexysolver/astrometry/util/: bl.c  bt.c  convolve-image.c  fileutils.c  fitstable.c  healpix.c  ioutils.c  log.c  os-features.c  quadfile.c  resample.c  starkd.c  starutil.c  tic.c
sexysolver/sep/: extract.c
spec/: stellarsolver.spec
ssolverutils/: bayer.c  dms.cpp  dms.h  fileio.cpp  fileio.h  imagelabel.h  stretch.cpp  stretch.h
stellarbatchsolver/: StellarBatchSolverIcon.icns  com.github.rlancaste.stellarbatchsolver.desktop  resources.qrc  stellarbatchsolver.cpp  stellarbatchsolver.h  stellarbatchsolver.ui  windowsicon.rc
stellarsolver/: astrometrylogger.cpp  astrometrylogger.h  externalextractorsolver.cpp  externalextractorsolver.h  externalsextractorsolver.cpp  externalsextractorsolver.h  extractorsolver.cpp  extractorsolver.h  internalextractorsolver.cpp  internalextractorsolver.h  internalsextractorsolver.cpp  internalsextractorsolver.h  onlinesolver.cpp  onlinesolver.h  parameters.cpp  parameters.h  sextractorsolver.cpp  sextractorsolver.h  stellarsolver.cpp  stellarsolver.h  stellarsolver_export.h  structuredefinitions.h  wcsdata.cpp  wcsdata.h
stellarsolver/astrometry/: LICENSE  README.md  os-features.h
stellarsolver/astrometry/blind/: blind.c  blindutils.c  engine.c  matchfile.c  quad-utils.c  solvedclient.c  solvedfile.c  solver.c  tweak.c  tweak2.c  verify.c
stellarsolver/astrometry/libkd/: kdtree_fits_io.c  kdtree_internal.c  kdtree_internal_dists.c  kdtree_internal_fits.c
stellarsolver/astrometry/qfits-an/: anqfits.c  qfits_card.c  qfits_error.c  qfits_header.c  qfits_image.c  qfits_memory.c  qfits_rw.c  qfits_table.c  qfits_time.c  qfits_tools.c
stellarsolver/astrometry/util/: anwcs.c  bl-sort.c  bl.c  bt.c  codekd.c  convolve-image.c  (+34 more)
stellarsolver/sep/: analyse.cpp  analyse.h  aperture.cpp  aperture.i  background.cpp  convolve.cpp  deblend.c  deblend.cpp  deblend.h  extract.c  extract.cpp  extract.h  lutz.c  lutz.cpp  lutz.h  overlap.h  sep.h  sepcore.h  util.cpp
tester/: StellarSolverIcon.icns  bayer.c  com.github.rlancaste.stellarsolver.desktop  dms.cpp  dms.h  imagelabel.cpp  imagelabel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  windowsicon.rc
testerutils/: dms.cpp  fileio.cpp  fileio.h  imagelabel.cpp  stretch.cpp
tests/: testdeletesolver.cpp  testdeletesolver.h  testmultiplesyncsolvers.cpp  testmultiplesyncsolvers.h  testthreadsafeerrors.cpp  testthreadsafeerrors.h  testtorture.cpp  testtorture.h  testtwostellarsolvers.cpp  testtwostellarsolvers.h
(+46 files in other folders)
